<resources>
    <string name="app_name">TGSPuzz</string>
    <string name="powered_by">Powered by: Jimmy Alejandro</string>
    <string name="ok_button">OK</string>
    <string name="saving_score">Guardando puntuación</string>
    <string name="score_saved">Puntuación guardada</string>

    <!-- Login -->

    <string name="login_title">TGS Puzzle</string>
    <string name="input_username">Usuario</string>
    <string name="input_password">Contraseña</string>
    <string name="input_reply_password">Repetir contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="google_login">Iniciar con google</string>

    <!-- Login Messages -->
    <string name="user_register_successful">Usuario creado</string>
    <string name="complete_information_message">Por favor complete la información</string>
    <string name="invalid_account">La cuenta no existe</string>
    <string name="empty_username">Digite el usuario</string>
    <string name="empty_password">Digite la contraseña</string>
    <string name="different_passwords_message">Las contraseñas no coinciden</string>
    <string name="invalid_password">La contraseña debe tener al menos 6 caracteres alfanuméricos</string>
    <string name="authentication_failed">Fallo de autenticación</string>
    <string name="account_exists_message">La cuenta ya existe</string>
    <string name="invalid_or_null_password">Contraseña inválida</string>
    <string name="invalid_user">El usuario no exite</string>

    <!-- ============================================== -->

    <!-- Home -->
    <string name="crossword_home">Crucigrama</string>
    <string name="search_word_home">Sopa de letras</string>
    <string name="level_game_title">Elije la dificultad</string>
    <string name="level_game_description">Piénsalo bien!...</string>
    <string name="easy_level_game">Fácil</string>
    <string name="hard_level_game">Dificil</string>

    <!-- Home menu -->
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Cerrar</string>
    <string name="username_header">Usuario</string>
    <string name="score_header">Puntuación</string>
    <string name="crossword_easy_score_item">Puntajes crucigrama fácil</string>
    <string name="crossword_hard_score_item">Puntajes crucigrama difícil</string>
    <string name="search_word_easy_score_item">Puntajes sopa de letras fácil</string>
    <string name="search_word_hard_score_item">Puntajes sopa de letras difícil</string>
    <string name="about_item">Acecrca de</string>
    <string name="logout_item">Cerrar sesión</string>

    <!-- CROSSWORD -->
    <string name="time">Tiempo:</string>

    <string name="a_label">A</string>
    <string name="b_label">B</string>
    <string name="c_label">C</string>
    <string name="d_label">D</string>
    <string name="e_label">E</string>
    <string name="f_label">F</string>
    <string name="g_label">G</string>
    <string name="h_label">H</string>
    <string name="i_label">I</string>
    <string name="j_label">J</string>
    <string name="k_label">K</string>
    <string name="l_label">L</string>
    <string name="m_label">M</string>
    <string name="n_label">N</string>
    <string name="ñ_label">Ñ</string>
    <string name="o_label">O</string>
    <string name="p_label">P</string>
    <string name="q_label">Q</string>
    <string name="r_label">R</string>
    <string name="s_label">S</string>
    <string name="t_label">T</string>
    <string name="u_label">U</string>
    <string name="v_label">V</string>
    <string name="w_label">W</string>
    <string name="x_label">X</string>
    <string name="y_label">Y</string>
    <string name="z_label">Z</string>

    <string name="solve_square">Resolver casilla</string>
    <string name="solve_word">Resolver palabra</string>
    <string name="solve_puzzle">Resolver puzzle</string>
    <string name="restart">Reiniciar</string>
    <string name="across">%1$d. Horizontal • %2$s</string>
    <string name="down">%1$d. Vertical • %2$s</string>
    <string name="title_by_author">%1$s by %2$s</string>
    <string name="youve_solved_the_puzzle">Has resuelto el puzzle</string>

    <!-- SEARCH WORD -->
    <string name="words_to_search">Palabras</string>
    <string name="youve_solved_search_word">Has resuelto la sopa de letras</string>

    <!-- SCORES -->
    <string name="scores_title">Puntajes</string>

</resources>