<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/crossword_easy_score_item"
            android:title="@string/crossword_easy_score_item"/>
        <item
            android:id="@+id/search_hard_word_item"
            android:title="@string/crossword_hard_score_item"/>

        <item
            android:id="@+id/search_word_easy_score_item"
            android:title="@string/search_word_easy_score_item"/>
        <item
            android:id="@+id/search_word_easy_item"
            android:title="@string/search_word_hard_score_item"/>

    </group>

    <group>

        <item
            android:id="@+id/about_item"
            android:title="@string/about_item"/>

    </group>

    <item
        android:id="@+id/logout_item"
        android:title="@string/logout_item"/>


</menu>