<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium"
        android:background="@color/primaryColor"
        android:text="@string/level_game_title"
        android:textAlignment="center"
        android:textColor="@color/whiteColor"
        android:textSize="28sp"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_below="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_large"
        android:visibility="gone"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_below="@id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/level_game_description"
        android:textAlignment="center"
        android:textSize="22sp"/>

    <LinearLayout
        android:layout_below="@id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/easy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/easy_level_game"
            android:textColor="@color/whiteColor"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@string/hard_level_game"
            android:textColor="@color/whiteColor"/>

    </LinearLayout>

</RelativeLayout>